fixed form wrap css

--- a/public/layouts/zupal/admin.css
+++ b/public/layouts/zupal/admin.css
@@ -39,16 +39,18 @@ a.linkbutton:hover
 #main dl.zend_form dt{
     float: left;
     width: 120px;
-    clear: both;
     margin-bottom: 0.25em;
     height: 1.25em;
     overflow:hidden;
+    clear: left;
 }
 
 #main dl.zend_form dd{
     margin-bottom: 0.25em;
     font-family: Arial,Helvetica,sans-serif;
     width: 405px;
+    float: left;
+    clear: right;
 }
 
 #main dl.zend_form{
